// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/gitsubmodules/extract extractPackageFile() extracts submodules 1`] = `
Array [
  Object {
    "currentDigest": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "currentValue": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "depName": "PowerShell-Docs",
    "registryUrls": Array [
      "git@github.com:PowerShell/PowerShell-Docs",
      "master",
    ],
  },
]
`;

exports[`lib/manager/gitsubmodules/extract extractPackageFile() extracts submodules 2`] = `
Array [
  Object {
    "currentDigest": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "currentValue": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "depName": "PowerShell-Docs",
    "registryUrls": Array [
      "git@github.com:PowerShell/PowerShell-Docs",
      "staging",
    ],
  },
]
`;

exports[`lib/manager/gitsubmodules/extract extractPackageFile() extracts submodules 3`] = `
Array [
  Object {
    "currentDigest": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "currentValue": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "depName": "PowerShell-Docs",
    "registryUrls": Array [
      "https://github.com/PowerShell/PowerShell-Docs",
      "staging",
    ],
  },
]
`;

exports[`lib/manager/gitsubmodules/extract extractPackageFile() extracts submodules 4`] = `
Array [
  Object {
    "currentDigest": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "currentValue": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "depName": "deps/renovate",
    "registryUrls": Array [
      "https://github.com/renovatebot/renovate.git",
      "master",
    ],
  },
  Object {
    "currentDigest": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "currentValue": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "depName": "deps/renovate-pro",
    "registryUrls": Array [
      "https://github.com/renovatebot/pro.git",
      "master",
    ],
  },
  Object {
    "currentDigest": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "currentValue": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "depName": "deps/renovate-config",
    "registryUrls": Array [
      "https://github.com/renovatebot/renovate-config.git",
      "master",
    ],
  },
]
`;
